Fix HTML encoding issues in index3.html
phone number added in contact form

--- a/index3.html
+++ b/index3.html
@@ -243,6 +243,10 @@
             <input id="name" name="name" required placeholder="Your full name" />
           </div>
           <div style="margin-top:10px">
+            <label for="Phone Number">Phone Number</label>
+            <input id="Phone Number" type="Phone Number" name="Phone Number" required placeholder="your mobile number in 10 digit" />
+          </div>
+          <div style="margin-top:10px">
             <label for="email">Email</label>
             <input id="email" type="email" name="email" required placeholder="you@example.com" />
           </div>
@@ -282,4 +286,5 @@
     }
   </script>
 </body>
+
 </html>
